# dropbox

./: CMakeLists.txt  README.md  clean_build.sh
.github/workflows/: build.yml  cmake-single-platform.yml
client/: CMakeLists.txt  client.cpp
docs/: notes.txt
server/: CMakeLists.txt  server.cpp
test_client/: CMakeLists.txt
test_client/src/: GTestMain.cpp
test_integration/: CMakeLists.txt
test_integration/src/: GTestMain.cpp
utils/: CMakeLists.txt  clientSocket.cpp  clientSocket.h  fileop.cpp  fileop.h  serverSocket.cpp  serverSocket.h  socket.cpp  socket.h
